WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203481
Module scripts should always decode using UTF-8
https://bugs.webkit.org/show_bug.cgi?id=203481
Summary
Module scripts should always decode using UTF-8
Anne van Kesteren
Reported
2019-10-28 01:40:05 PDT
This fails html/semantics/scripting-1/the-script-element/module/charset-02.html in web-platform-tests.
Attachments
Add attachment
proposed patch, testcase, etc.
Ahmad Saleem
Comment 1
2022-08-05 16:09:08 PDT
NOTE - Safari is still failing two sub-tests;
https://wpt.fyi/results/html/semantics/scripting-1/the-script-element/module/charset-02.html?label=master&label=experimental&aligned&view=subtest&q=charset-02
UTF-16 module script with UTF-16BE BOM & UTF-16 module script with UTF-16LE BOM
Radar WebKit Bug Importer
Comment 2
2022-08-05 18:41:41 PDT
<
rdar://problem/98222621
>
Chris Dumez
Comment 3
2023-01-23 11:03:08 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8981
EWS
Comment 4
2023-01-23 16:21:48 PST
Committed
259251@main
(c40873d23eea): <
https://commits.webkit.org/259251@main
> Reviewed commits have been landed. Closing PR #8981 and removing active labels.
Ryosuke Niwa
Comment 5
2023-01-23 21:07:03 PST
This patch broke builds: ld: warning: directory not found for option '-L/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.3.sdk/usr/local/lib' Undefined symbols for architecture x86_64: "WebCore::CachedScript::scriptHash(WebCore::CachedScript::ShouldDecodeAsUTF8Only)", referenced from: WebCore::CachedScriptSourceProvider::hash() const in Internals-cd36146d9e9bd865a5d44b2d2e51c772ab2b26571f02b9a2c612ac2085f1c5da.o "WebCore::CachedScript::script(WebCore::CachedScript::ShouldDecodeAsUTF8Only)", referenced from: WebCore::CachedScriptSourceProvider::source() const in Internals-cd36146d9e9bd865a5d44b2d2e51c772ab2b26571f02b9a2c612ac2085f1c5da.o ld: symbol(s) not found for architecture x86_64 clang: error: linker command failed with exit code 1 (use -v to see invocation)
Ryosuke Niwa
Comment 6
2023-01-23 21:10:15 PST
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/9015
EWS
Comment 7
2023-01-23 21:14:16 PST
Committed
259261@main
(64dcc8c9d1ae): <
https://commits.webkit.org/259261@main
> Reviewed commits have been landed. Closing PR #9015 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug