Source/WebCore/bindings/js/CachedScriptSourceProvider.h
@@ -43,8 +43,8 @@ public:
         m_cachedScript->removeClient(*this);
     }
 
-    unsigned hash() const override { return m_cachedScript->scriptHash(); }
-    StringView source() const override { return m_cachedScript->script(); }
+    unsigned hash() const override;
+    StringView source() const override;
 
 private:
     CachedScriptSourceProvider(CachedScript* cachedScript, JSC::SourceProviderSourceType sourceType, Ref<CachedScriptFetcher>&& scriptFetcher)
@@ -56,5 +56,23 @@ private:
 
     CachedResourceHandle<CachedScript> m_cachedScript;
 };
+
+inline unsigned CachedScriptSourceProvider::hash() const
+{
+    // Modules should always be decoded as UTF-8.
+    // https://html.spec.whatwg.org/multipage/webappapis.html#fetch-a-single-module-script
+    if (sourceType() == JSC::SourceProviderSourceType::Module)
+        return m_cachedScript->scriptHash(CachedScript::ShouldDecodeAsUTF8Only::Yes);
+    return m_cachedScript->scriptHash();
+}
+
+inline StringView CachedScriptSourceProvider::source() const
+{
+    // Modules should always be decoded as UTF-8.
+    // https://html.spec.whatwg.org/multipage/webappapis.html#fetch-a-single-module-script
+    if (sourceType() == JSC::SourceProviderSourceType::Module)
+        return m_cachedScript->script(CachedScript::ShouldDecodeAsUTF8Only::Yes);
+    return m_cachedScript->script();
+}
 
 } // namespace WebCore
